# cpptui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  coords.hpp  cpptui.hpp  input.hpp  test.cpp  tui.hpp
.github/workflows/: cmake-multi-platform.yml  post_examples_to_release.yml  test-builds-on-pull.yml
examples/: boxes.cpp  ch_to_int.cpp  cursor-position-query.cpp  hello_world.cpp  read_event.cpp  read_input.cpp  screen-filler.cpp  snake.cpp  tui_string_size.cpp
